[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]
[ext_resource path="res://Opponent2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/My project-1-2.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.5, 357.375 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 359, 23.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 356.75, 18 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 47.125, 3.25 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -503.0
margin_top = -30.0
margin_right = 203.5
margin_bottom = 30.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.843137, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 101.0
margin_top = -30.0
margin_right = 199.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.843137, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="CountdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -190.0
margin_right = 17.5
margin_bottom = -130.0
custom_colors/font_color = Color( 0.760784, 0.25098, 0.12549, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 35, 360 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 685, 360 )

[node name="Opponent2" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 11 )

[node name="Player2" parent="." instance=ExtResource( 8 )]
position = Vector2( 422, 666 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 360 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -19.5, 359.375 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 739, 359 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2( 361, -24.5 )
shape = SubResource( 6 )

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2( 359.25, 739 )
shape = SubResource( 7 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Plat1" type="KinematicBody2D" parent="."]
position = Vector2( -30, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plat1"]
position = Vector2( 181, 5 )
scale = Vector2( 0.0572727, 0.00789216 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat1"]
position = Vector2( 180.875, 5 )
shape = SubResource( 8 )

[node name="Plat6" type="KinematicBody2D" parent="."]
position = Vector2( -30, 710 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plat6"]
position = Vector2( 181, 5 )
scale = Vector2( 0.0572727, 0.00789216 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat6"]
position = Vector2( 180.875, 5 )
shape = SubResource( 8 )

[node name="Plat2" type="KinematicBody2D" parent="."]
position = Vector2( 386, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plat2"]
position = Vector2( 181, 5 )
scale = Vector2( 0.0572727, 0.00789216 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat2"]
position = Vector2( 180.875, 5 )
shape = SubResource( 8 )

[node name="Plat5" type="KinematicBody2D" parent="."]
position = Vector2( 386, 710 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plat5"]
position = Vector2( 181, 5 )
scale = Vector2( 0.0572727, 0.00789216 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat5"]
position = Vector2( 180.875, 5 )
shape = SubResource( 8 )

[node name="Plat3" type="KinematicBody2D" parent="."]
position = Vector2( 174, -2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plat3"]
position = Vector2( 181, 5 )
scale = Vector2( 0.0572727, 0.00789216 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat3"]
position = Vector2( 180.875, 5 )
shape = SubResource( 8 )

[node name="Plat4" type="KinematicBody2D" parent="."]
position = Vector2( 174, 710 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plat4"]
position = Vector2( 181, 5 )
scale = Vector2( 0.0572727, 0.00789216 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat4"]
position = Vector2( 180.875, 5 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
